...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/standings_header_title"
                android:textSize="@dimen/standings_header_textsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/standings_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/team_points"
...
