...
    <string name="player_details_appearances_description">Appearances</string>
    <string name="player_details_minutes_description">Minutes played</string>


    <!-- Menu -->
    <string name="home">Home</string>
    <string name="premier_league">Premier League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="la_liga">La Liga Santander</string>
    <string name="serie_a">Serie A</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="eredivisie">Eredivisie</string>

...
